form is created

--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -58,7 +58,10 @@
             <img height="600" width="400" src="ice cream.jpg">
             <hr>
             <img height="600" width="400" alt="This is an img" src="https://media.istockphoto.com/id/1496856950/photo/pastel-neon-pink-purple-orange-yellow-holographic-metallic-foil-background.jpg?s=1024x1024&w=is&k=20&c=4c-QCwhU1xaO8hh0NXD5VY-5GI4XzuhfVT4VElCzA9k=">
-            
-
+            <FORM>
+                <input type="text" name="First name" required>
+            </FORM>
+<!-- html rules -->
+ 
 </body>
 </html>
